--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -454,7 +454,15 @@
      "pdf-ignore-input"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two loop version took 40.936564 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's compare how fast the implementations are\n",
     "def time_function(f, *args):\n",
