--- a/assignment2/BatchNormalization.ipynb
+++ b/assignment2/BatchNormalization.ipynb
@@ -1114,7 +1114,7 @@
     "## Answer:\n",
     "2. Having a very small dimension of features. Layer normalization gets mean and variance statistics from feature dimensions to transform activations. If there are very small dimension of features, these statistics can be very noisy, affecting the performance of layer normalization.\n",
     "\n",
-    "3. Having a high regularization term. This doesn't only affect layer normalization. A high regularization term forces weights to be small, thus affecting the performance of an model."
+    "3. Having a high regularization term. This doesn't only affect layer normalization. A high regularization term forces weights to be small, thus affecting the performance of any model."
    ]
   }
  ],
