--- a/assignment3/Generative_Adversarial_Networks_PyTorch.ipynb
+++ b/assignment3/Generative_Adversarial_Networks_PyTorch.ipynb
@@ -2037,7 +2037,7 @@
     ]
    },
    "source": [
-    "This is not a good sign. That the generator loss decreases means that the generator is getting better at fooling the discriminator. However, the discriminor loss staying at a constant high value shows that the discriminator is not improving. If the discriminator is too easy to fool, the generator will not produce high-quality fake images."
+    "This is not a good sign. That the generator loss decreases means the generator is getting better at fooling the discriminator. However, the discriminor loss staying at a constant high value shows that the discriminator is not improving. If the discriminator is too easy to fool, the generator will not produce high-quality fake images."
    ]
   }
  ],
